絞込み検索機能の追加 ラジオボタン検索結果1件時に選択しても更新できない不具合の解消

--- a/J-Master/WebContent/WEB-INF/web.xml
+++ b/J-Master/WebContent/WEB-INF/web.xml
@@ -175,6 +175,22 @@
     <url-pattern>/ShozokuLeaderSelect/</url-pattern>
   </servlet-mapping>
 
+  <servlet>
+   <servlet-name>ShozokuLeaderUpdate</servlet-name>
+   <servlet-class>webApplication.servlet.ShozokuLeaderUpdateServlet</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>ShozokuLeaderUpdate</servlet-name>
+    <url-pattern>/ShozokuLeaderUpdate/</url-pattern>
+  </servlet-mapping>
 
+    <servlet>
+   <servlet-name>EmployeeSearch</servlet-name>
+   <servlet-class>webApplication.servlet.EmployeeSearchSrevlet</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>EmployeeSearch</servlet-name>
+    <url-pattern>/EmployeeSearch/</url-pattern>
+  </servlet-mapping>
 
 </web-app>
