--- a/J-Master/WebContent/build.xml
+++ b/J-Master/WebContent/build.xml
@@ -18,21 +18,25 @@
 	<target name="makewar">
 		<jar destfile="${war.home}/${web-app.name}.war"  />
 	</target>
-	 -->
+	-->
 
 	<property name="buildForWar" location="../build"/>
 	<property name="db-host-local" value="localhost"/>
 	<property name="db-user-local" value="rikai"/>
 	<property name="db-host-server" value="192.168.20.32"/>
 	<property name="db-user-server" value="hirata"/>
+	<property name="log-file-directory-local" value="/J-Master_log/J-Master.log" />
+	<property name="log-file-directory-server" value="webapps/J-Master/log/J-Master.log" />
 
 	<!-- ローカルでテストするときにDB接続先をローカルホストに書き換える -->
-	<target name="localtest">
+<!--	<target name="localtest"> -->
 		<!-- context.xmlのDB接続先HOSTを置換する -->
+	<!--
 		<replaceregexp file="${war.home}/META-INF/context.xml" match="(jdbc:mysql://).*.(/sampledb040)" byline="true" replace="\1${db-host-local}\2"/>
 		<replaceregexp file="${war.home}/META-INF/context.xml" match="(username=&quot;).*.(&quot;)" byline="true" replace="\1${db-user-local}\2"/>
 		<replaceregexp file="${war.home}/META-INF/context.xml" match="(password=&quot;).*.(&quot;)" byline="true" replace="\1${db-user-local}\2"/>
 	</target>
+	-->
 
 	<!-- サーバーデプロイ用のwarを作成する。DB接続先をサーバー用に書き換える -->
 	<target name="makewar">
@@ -42,15 +46,21 @@
 		<replaceregexp file="${war.home}/META-INF/context.xml" match="(jdbc:mysql://).*.(/sampledb040)" byline="true" replace="\1${db-host-server}\2"/>
 		<replaceregexp file="${war.home}/META-INF/context.xml" match="(username=&quot;).*.(&quot;)" byline="true" replace="\1${db-user-server}\2"/>
 		<replaceregexp file="${war.home}/META-INF/context.xml" match="(password=&quot;).*.(&quot;)" byline="true" replace="\1${db-user-server}\2"/>
+		<replaceregexp file="${war.home}/../src/log4j.xml" match="(&lt;param name=&quot;File&quot; value=&quot;).*.(&quot; /&gt;)" byline="true" replace="\1${log-file-directory-server}\2"/>
+
+
 		<war destfile="${war.home}/${web-app.name}.war" webxml="${war.home}/WEB-INF/web.xml">
 			<fileset dir="${war.home}/" excludes="**/web.xml" />
 			<!-- ビルドしたclassファイルをWEB-INF/classesフォルダに配置 -->
 			<classes dir="${buildForWar}"/>
 		</war>
+
 		<!-- context.xmlのDB接続先HOSTを元のローカル設定に戻す -->
 		<replaceregexp file="${war.home}/META-INF/context.xml" match="(jdbc:mysql://).*.(/sampledb040)" byline="true" replace="\1${db-host-local}\2"/>
 		<replaceregexp file="${war.home}/META-INF/context.xml" match="(username=&quot;).*.(&quot;)" byline="true" replace="\1${db-user-local}\2"/>
 		<replaceregexp file="${war.home}/META-INF/context.xml" match="(password=&quot;).*.(&quot;)" byline="true" replace="\1${db-user-local}\2"/>
+		<replaceregexp file="${war.home}/../src/log4j.xml" match="(&lt;param name=&quot;File&quot; value=&quot;).*.(&quot; /&gt;)" byline="true" replace="\1${log-file-directory-local}\2"/>
+
 	</target>
 
 </project>
